"generate profile" now has CSRF protection (see #23)

--- a/src/Hvz/GameBundle/Resources/config/routing.yml
+++ b/src/Hvz/GameBundle/Resources/config/routing.yml
@@ -92,7 +92,7 @@ hvz_admin_user_delete:
         id: \d+
 
 hvz_admin_profile_generate:
-    pattern: /admin/profile/generate/{id}
+    pattern: /admin/profile/generate/{id}/{token}
     defaults: { _controller: HvzGameBundle:Admin:profileGenerate }
     requirements:
         id: \d+
